# dotshenvy

./: README.md  pyproject.toml
shenvy/: cli.py  shims.py
shenvy/templates/: shim.sh.j2
shenvy/tools/php/: Dockerfile
